--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Forum - Login</title>
 </head>
-<body>
+<body background="http://2.bp.blogspot.com/-BsL9gRE80Ug/U0OgeWbbxtI/AAAAAAAAF-w/teXrzw-TBcU/s1600/nacre-background-tile.jpg">
 	<h1>Zaloguj się</h1>
 	<p th:text="${error != null}?'Error: ' + ${error}" />
 	<form action="#" th:action="@{/login}" th:object="${user}" method="post">
