--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Forum</title>
 </head>
-<body>
+<body background="http://2.bp.blogspot.com/-BsL9gRE80Ug/U0OgeWbbxtI/AAAAAAAAF-w/teXrzw-TBcU/s1600/nacre-background-tile.jpg">
+	<h1>Forum</h1>
 	<table class="table table-striped">
   <tr>
    <th>Temat</th>
