--- a/src/main/resources/templates/topic.html
+++ b/src/main/resources/templates/topic.html
@@ -19,8 +19,8 @@
   </tr>
   <table>
 	  	<br><b>------------------------------------------------------------------- </b></br>
-	  	<a href="/new_message">Dodaj nowy wątek</a>
-	  	<br> </br>
+	  	<a th:href="@{/new_message(id=${topicId})}">Dodaj nowy wątek</a>
+	  	<br> </br>	
   </table>
 </table>
 <table class="table table-striped">
